@@ -10,6 +10,9 @@ What's New in Python 3.2.4
 Core and Builtins
 -----------------
 
+- Issue #14630: Fix a memory access bug for instances of a subclass of int
+  with value 0.
+
 - Issue #14612: Fix jumping around with blocks by setting f_lineno.
 
 - Issue #14607: Fix keyword-only arguments which started with ``__``.
